[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/imagebutton/image_empty.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/ui/imagebutton/image_hover.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/ui/imagebutton/image_pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/fonts/LabelFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/ui/empty.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/ui/imagebutton/UnitButton.gd" type="Script" id=6]

[node name="UnitButton" type="Button"]
margin_left = -35.0
margin_top = -35.0
margin_right = 35.0
margin_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 1 )
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Texture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.05
anchor_top = 1.0
anchor_right = 0.95
anchor_bottom = 1.0
margin_top = -24.0
custom_fonts/font = ExtResource( 4 )
align = 2
valign = 2
__meta__ = {
"_edit_lock_": true
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exit"]
[connection signal="pressed" from="." to="." method="_set_selected_unit"]
